# fiverr-agency

./: package-lock.json
dashboard/: package.json  railway.json
dashboard/lib/: supabase.ts
orchestrator/: README.md  nixpacks.toml  pyproject.toml  railway.json
orchestrator/src/agency/: __init__.py  __main__.py  cli.py  db.py  graph.py  lifecycle.py
orchestrator/src/agency/agents/: background_removal_agent.py  base.py  logo_generator.py  technical_qc.py
orchestrator/src/agency/clients/: fal_client.py
orchestrator/src/agency/intake/: gmail_client.py  runner.py
orchestrator/tests/: test_delivery_agents.py  test_editing.py  test_fal_client.py  test_gmail_client.py  test_intake_parser.py  test_prompt_engineering.py  test_runner.py  test_social_graphics.py  test_thumbnail_generator.py  test_visual_qc.py
supabase/: config.toml
