[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agency"
version = "0.1.0"
description = "Orchestrator and agent runtime for the Fiverr AI Agency pipeline"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Fiverr AI Agency" }]

dependencies = [
  # State machine
  "langgraph>=1.1.0,<2.0",
  # LLM providers
  "anthropic>=0.40",
  "openai>=1.55",
  # Image generation
  "fal-client>=0.5",
  "replicate>=1.0",
  # Database
  "supabase>=2.10",
  "postgrest>=0.18",
  # Gmail intake
  "google-api-python-client>=2.140",
  "google-auth>=2.35",
  "google-auth-oauthlib>=1.2",
  # Image editing (Text Renderer, Technical QC)
  "Pillow>=10.4",
  # Logo vectorization (raster → SVG)
  "vtracer>=0.6",
  # Background removal
  "rembg>=2.0",
  # Config + validation
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  # HTTP + utilities
  "httpx>=0.27",
  "python-dotenv>=1.0",
  # Logging
  "structlog>=25.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-mock>=3.14",
  "mypy>=1.13",
  "ruff>=0.8",
  "types-python-dateutil",
]

[project.scripts]
agency = "agency.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agency"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
  "ASYNC",
]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_decorators = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "supabase.*",
  "postgrest.*",
  "fal_client.*",
  "replicate.*",
  "googleapiclient.*",
  "google.oauth2.*",
  "google.auth.*",
  "google_auth_oauthlib.*",
  "vtracer.*",
  "rembg.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "agency.db",
  "agency.intake.gmail_client",
  "agency.clients.anthropic_client",
  "agency.editing.text_overlay",
  "agency.agents.logo_generator",
  "agency.agents.background_removal_agent",
  "agency.agents.prompt_engineering",
  "agency.graph",
]
disable_error_code = ["arg-type", "return-value", "no-any-return", "no-untyped-call", "call-overload", "index", "union-attr", "type-arg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
